# snake-rl

./: README.md  dev.py  main.py  main_a2c.py  main_ppo.py  pyproject.toml  sil.py  wrapper.py  wrapper_test.py
model/: cnn_model.py
